--- a/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Base.lproj/Main.storyboard
@@ -1,26 +1,89 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KsX-Fi-SS2">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="UVE-gO-yaU">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Pq7-2B-mON" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="QhK-MS-2BW"/>
+                        <viewControllerLayoutGuide type="bottom" id="GO5-tb-d0I"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="M9Z-qS-VCQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="wOQ-ST-0nF"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rT2-Zh-tNN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-125" y="263"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="wAs-lB-AaQ">
+            <objects>
+                <viewController id="dLs-qN-jTh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2G9-Ii-S1d"/>
+                        <viewControllerLayoutGuide type="bottom" id="r7L-6e-BWk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hcN-3Y-Le8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="44c-MQ-Oyt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tqm-M3-Vnp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-940" y="743"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="M5c-th-hwa">
+            <objects>
+                <viewController id="KsX-Fi-SS2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JNM-tT-7rz"/>
+                        <viewControllerLayoutGuide type="bottom" id="cWm-Kb-vQ1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YxW-Ly-FWW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="qI1-XR-3tE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jI7-JH-Cgo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-125" y="-392"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="PJk-Gw-TlT">
+            <objects>
+                <tabBarController id="IYL-hS-ntt" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Epa-MC-AMf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="KsX-Fi-SS2" kind="relationship" relationship="viewControllers" id="K00-hZ-wNX"/>
+                        <segue destination="Pq7-2B-mON" kind="relationship" relationship="viewControllers" id="ppT-ln-s7k"/>
+                        <segue destination="dLs-qN-jTh" kind="relationship" relationship="viewControllers" id="yK7-4V-Lhw"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vHP-Mf-Uwn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1077" y="-65"/>
         </scene>
     </scenes>
 </document>
