--- a/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KsX-Fi-SS2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IYL-hS-ntt">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--View Controller-->
         <scene sceneID="UVE-gO-yaU">
             <objects>
                 <viewController id="Pq7-2B-mON" sceneMemberID="viewController">
@@ -18,17 +18,19 @@
                         <viewControllerLayoutGuide type="bottom" id="GO5-tb-d0I"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="M9Z-qS-VCQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="wOQ-ST-0nF"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="" image="tab_plus_black" id="wOQ-ST-0nF">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rT2-Zh-tNN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-125" y="263"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="wAs-lB-AaQ">
             <objects>
                 <viewController id="dLs-qN-jTh" sceneMemberID="viewController">
@@ -36,41 +38,45 @@
                         <viewControllerLayoutGuide type="top" id="2G9-Ii-S1d"/>
                         <viewControllerLayoutGuide type="bottom" id="r7L-6e-BWk"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="hcN-3Y-Le8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" id="hcN-3Y-Le8" customClass="FindFriendsViewController" customModule="Makestagram" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="44c-MQ-Oyt"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="" image="tab_find_friends_black" id="44c-MQ-Oyt">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tqm-M3-Vnp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-940" y="743"/>
         </scene>
-        <!--Item 1-->
+        <!--Home View Controller-->
         <scene sceneID="M5c-th-hwa">
             <objects>
-                <viewController id="KsX-Fi-SS2" sceneMemberID="viewController">
+                <viewController id="KsX-Fi-SS2" customClass="HomeViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="JNM-tT-7rz"/>
                         <viewControllerLayoutGuide type="bottom" id="cWm-Kb-vQ1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="YxW-Ly-FWW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="qI1-XR-3tE"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_home_black" id="qI1-XR-3tE">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jI7-JH-Cgo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-125" y="-392"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main Tab Bar Controller-->
         <scene sceneID="PJk-Gw-TlT">
             <objects>
-                <tabBarController id="IYL-hS-ntt" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="Epa-MC-AMf">
+                <tabBarController id="IYL-hS-ntt" customClass="MainTabBarController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="Epa-MC-AMf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -86,4 +92,9 @@
             <point key="canvasLocation" x="-1077" y="-65"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tab_find_friends_black" width="25" height="25"/>
+        <image name="tab_home_black" width="25" height="25"/>
+        <image name="tab_plus_black" width="25" height="25"/>
+    </resources>
 </document>
