--- a/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <viewControllerLayoutGuide type="bottom" id="GO5-tb-d0I"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="M9Z-qS-VCQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -39,7 +39,7 @@
                         <viewControllerLayoutGuide type="bottom" id="r7L-6e-BWk"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hcN-3Y-Le8" customClass="FindFriendsViewController" customModule="Makestagram" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -55,7 +55,7 @@
         <scene sceneID="PJk-Gw-TlT">
             <objects>
                 <tabBarController id="IYL-hS-ntt" customClass="MainTabBarController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="Epa-MC-AMf">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Epa-MC-AMf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
