--- a/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram/Base.lproj/Main.storyboard
@@ -28,28 +28,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rT2-Zh-tNN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1078" y="766"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="wAs-lB-AaQ">
-            <objects>
-                <viewController id="dLs-qN-jTh" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="2G9-Ii-S1d"/>
-                        <viewControllerLayoutGuide type="bottom" id="r7L-6e-BWk"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="hcN-3Y-Le8" customClass="FindFriendsViewController" customModule="Makestagram" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="tab_find_friends_black" id="44c-MQ-Oyt">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Tqm-M3-Vnp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2124" y="766"/>
+            <point key="canvasLocation" x="-1078" y="905"/>
         </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="PJk-Gw-TlT">
@@ -63,7 +42,7 @@
                     <connections>
                         <segue destination="dp1-0y-gLS" kind="relationship" relationship="viewControllers" id="K00-hZ-wNX"/>
                         <segue destination="Pq7-2B-mON" kind="relationship" relationship="viewControllers" id="ppT-ln-s7k"/>
-                        <segue destination="dLs-qN-jTh" kind="relationship" relationship="viewControllers" id="yK7-4V-Lhw"/>
+                        <segue destination="BCt-pH-sWX" kind="relationship" relationship="viewControllers" id="yK7-4V-Lhw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vHP-Mf-Uwn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -78,11 +57,20 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v4e-eP-ni0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-164" y="453"/>
+            <point key="canvasLocation" x="-355" y="618"/>
+        </scene>
+        <!--FindFriends-->
+        <scene sceneID="SSf-NW-tpF">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FindFriends" id="BCt-pH-sWX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="e6T-iA-wlW"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mme-nc-15a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2124" y="765.96701649175418"/>
         </scene>
     </scenes>
     <resources>
-        <image name="tab_find_friends_black" width="25" height="25"/>
         <image name="tab_plus_black" width="25" height="25"/>
     </resources>
 </document>
